--- a/.github/workflows/check-flutter-version.yml
+++ b/.github/workflows/check-flutter-version.yml
@@ -16,23 +16,33 @@ jobs:
       with:
         fetch-depth: 1
     
-    - name: Check Flutter latest stable version
+    - name: Check Flutter latest engine version from source
       id: check
       run: |
-        echo "正在检查 Flutter 最新版本..."
+        echo "正在检查 Flutter Engine 最新版本（从源码仓库）..."
         
-        # 获取 Flutter 最新稳定版本
-        LATEST_VERSION=$(curl -sL https://api.github.com/repos/flutter/flutter/releases/latest | jq -r .tag_name)
-        echo "Latest Flutter version: $LATEST_VERSION"
+        # 从 flutter/flutter 的 stable 分支获取 engine.version
+        # 这个文件包含了对应的 Engine commit hash
+        ENGINE_VERSION=$(curl -sL https://raw.githubusercontent.com/flutter/flutter/stable/bin/internal/engine.version)
+        
+        # 获取 Flutter SDK 版本（用于标识）
+        FLUTTER_VERSION=$(curl -sL https://raw.githubusercontent.com/flutter/flutter/stable/version)
+        
+        echo "Flutter SDK version: $FLUTTER_VERSION"
+        echo "Engine commit: $ENGINE_VERSION"
+        
+        # 使用 Flutter SDK 版本作为标识
+        LATEST_VERSION="$FLUTTER_VERSION"
         echo "latest_version=$LATEST_VERSION" >> $GITHUB_OUTPUT
+        echo "engine_commit=$ENGINE_VERSION" >> $GITHUB_OUTPUT
         
         # 检查是否已存在该版本的 SO 文件
         SO_FILE="lib/libflutter_linux_gtk.so.$LATEST_VERSION"
         if [ -f "$SO_FILE" ]; then
-          echo "✅ Version $LATEST_VERSION already exists"
+          echo "✅ Version $LATEST_VERSION already exists (Engine: $ENGINE_VERSION)"
           echo "build_needed=false" >> $GITHUB_OUTPUT
         else
-          echo "🆕 New version detected: $LATEST_VERSION"
+          echo "🆕 New version detected: $LATEST_VERSION (Engine: $ENGINE_VERSION)"
           echo "build_needed=true" >> $GITHUB_OUTPUT
         fi
     
@@ -41,7 +51,7 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          console.log('触发构建工作流: Flutter ${{ steps.check.outputs.latest_version }}');
+          console.log('触发构建工作流: Flutter ${{ steps.check.outputs.latest_version }} (Engine: ${{ steps.check.outputs.engine_commit }})');
           
           await github.rest.actions.createWorkflowDispatch({
             owner: context.repo.owner,
@@ -49,7 +59,8 @@ jobs:
             workflow_id: 'build-flutter-engine.yml',
             ref: 'main',
             inputs: {
-              version: '${{ steps.check.outputs.latest_version }}'
+              flutter_version: '${{ steps.check.outputs.latest_version }}',
+              engine_commit: '${{ steps.check.outputs.engine_commit }}'
             }
           });
           
