fix: add contents and issues write permissions
This allows the workflow to create repository dispatch events and issues

--- a/.github/workflows/check-flutter-version.yml
+++ b/.github/workflows/check-flutter-version.yml
@@ -10,8 +10,8 @@ jobs:
   check-version:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      actions: write
+      contents: write
+      issues: write
     
     steps:
     - name: Checkout repository
